--- a/static/index.html
+++ b/static/index.html
@@ -14,14 +14,19 @@
         <title>Spotfire Mod Example</title>
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" type="text/css" media="all" href="main.css" />
+        <link rel="stylesheet" type="text/css" media="all" href="bootstrap.4.1.2.css" />
     </head> 
-    <body>
-        <div hidden id="warning" style="position:fixed;cursor:help;z-index: 5;right:50%">⚠️</div>
+    <body> 
+        <div hidden id="warning" style="position:fixed;cursor:help;z-index: 10;">⚠️</div>
+        <div id="configDialog" hidden>
+            <span onclick="document.getElementById('configDialog').hidden = true" class="fromCloseBtn">✖</span>
+            <div id="form"></div> 
+        </div>
         <div id="mod-container"><div id="plotyly_plot"></div></div>
-
         <script id="spotfire-loader">var Spotfire=function(e){"use strict";return e.initialize=function(e){var t="sfTemp"+1e4*Math.random()+"Cb",r=window;r[t]=e;var a={subject:"GetUrl",callbackId:-1,options:{cbId:t}};r.addEventListener("message",(function e(t){if(t.source!==r.parent||!t.data.src)return;r.removeEventListener("message",e);var a=document,n=a.createElement("script");n.src=t.data.src,(a.head||a.body).appendChild(n)})),r.parent.postMessage(a,"*")},e}({});</script>
         <script src="bundle.js"></script>
-    </body>
+    </body> 
+
 
 </html>
 
