--- a/static/index.html
+++ b/static/index.html
@@ -1,7 +1,7 @@
 <!--
 /*
 * Copyright © 2020. TIBCO Software Inc.
-* This file is subject to the license terms contained
+* This file is subject to the license terms contained 
 * in the license file that is distributed with this file.
 */
 -->
@@ -17,12 +17,33 @@
         <link rel="stylesheet" type="text/css" media="all" href="bootstrap.4.1.2.css" />
     </head> 
     <body> 
-        <div hidden id="warning" style="position:fixed;cursor:help;z-index: 10;">⚠️</div>
-        <div id="configDialog" hidden>
-            <span onclick="document.getElementById('configDialog').hidden = true" class="fromCloseBtn">✖</span>
-            <div id="form"></div> 
+
+
+        <div hidden id="warning" style="position:fixed;cursor:help;z-index: 10;">⚠️ </div>
+        <div hidden id="warningDialog">
+            <span>
+            ⚠️ Add the row number as the first node of the Dimension axis to ensure data integrity<br>
+            or use the custom expression format:<br><br>
+            <pre>&lt;baserowid() NEST [col_1] NEST [col_2] ... NEST [col_N]></pre>
+            <img style="justify-self:center" src="select_columns.png"></img> 
+            </span>
         </div>
+
+        <div id="configDialog" hidden> 
+            <span onclick="document.getElementById('configDialog').hidden = true" class="fromCloseBtn">
+                <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 16 16" enable-background="new 0 0 16 16" xml:space="preserve" class="closeSvg" style="width: 16px; height: 16px;"><g id="Lager_1"><g><g>
+                    <rect x="0.286" y="7.229" transform="matrix(0.7071 -0.7071 0.7071 0.7071 -3.3137 8)" fill="#000" width="15.428" height="1.543"></rect></g></g><g><g>
+                    <rect x="7.229" y="0.286" transform="matrix(0.7071 -0.7071 0.7071 0.7071 -3.3137 8)" fill="#000" width="1.543" height="15.428"></rect></g></g></g>
+                </svg>
+            </span>
+            <div id="form" class="dialog RoundedDropShadow"></div> 
+        </div>
+
         <div id="mod-container"><div id="plotyly_plot"></div></div>
+
+
+
+
         <script id="spotfire-loader">var Spotfire=function(e){"use strict";return e.initialize=function(e){var t="sfTemp"+1e4*Math.random()+"Cb",r=window;r[t]=e;var a={subject:"GetUrl",callbackId:-1,options:{cbId:t}};r.addEventListener("message",(function e(t){if(t.source!==r.parent||!t.data.src)return;r.removeEventListener("message",e);var a=document,n=a.createElement("script");n.src=t.data.src,(a.head||a.body).appendChild(n)})),r.parent.postMessage(a,"*")},e}({});</script>
         <script src="bundle.js"></script>
     </body> 
