Bug and fixes ready for review. Export PDF pending

--- a/static/index.html
+++ b/static/index.html
@@ -18,8 +18,8 @@
     </head> 
     <body> 
 
-        <div id="testpopout" hidden>click here to test popout</div>
-        <div id="mod-container"><div id="plotyly_plot"></div><style id="mod-container-style"></style></div>
+        <div id="warning-message"></div>
+        <div id="mod-container"><div id="plotly_plot"></div><style id="mod-container-style"></style></div>
         
         <div id="configDialog" hidden> 
             <span onclick="document.getElementById('configDialog').hidden = true" class="fromCloseBtn">
